src/tess/tl/test/pass/test_const_value_loop_reassign.tl
#module main
#import <Array.tl>

main() {
    arr := Array.empty[Int]()
    arr.push(1)
    arr.push(2)

    for x in arr {
        x = 99
    }

    arr.free()
    0
}
